--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "server"]
 	path = server
 	url = https://github.com/spwashi/movie-search-server
+[submodule "design"]
+	path = design
+	url = https://github.com/spwashi/movie-search-client-design.git
