added more env variables

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ REACT_APP_BACKEND_URL=http://10.0.0.120:8001
 
 ## URL for backend on production
 #REACT_APP_BACKEND_URL=https://example.com
+
+REACT_APP_THEME_COLOR="#282c34"
+REACT_APP_TITLE="Movie and TV Search"Get stats about your favorite movies and series
+REACT_APP_DESCRIPTION="Get stats about your favorite movies and series"Get stats about your favorite movies and series
